Refactor MIDIIntermediateRepresentations to remove unboxing